--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "production": "npm run build && npm run start"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "axios": "^0.23.0",
     "moment": "^2.29.1",
     "next": "11.1.2",
@@ -18,11 +19,14 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.5",
+    "react-slick": "^0.28.1",
     "react-toastify": "^8.0.3",
+    "react-tsparticles": "^1.36.0",
     "redux": "^4.1.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.3.0",
     "simple-react-validator": "^1.6.1",
+    "slick-carousel": "^1.8.1",
     "sweetalert": "^2.1.2"
   },
   "devDependencies": {
