--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "production": "npm run build && npm run start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "aos": "^3.0.0-beta.6",
     "axios": "^0.23.0",
     "moment": "^2.29.1",
