--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "production": "npm run build && npm run start"
+    "prod": "npm run build && npm run start"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
@@ -18,6 +18,7 @@
     "next": "11.1.2",
     "next-redux-cookie-wrapper": "^2.1.0",
     "next-redux-wrapper": "^7.0.5",
+    "pathseg": "^1.2.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.5",
