--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "aos": "^3.0.0-beta.6",
     "axios": "^0.23.0",
+    "detect-browser": "^5.2.1",
     "devicon": "^2.14.0",
     "moment": "^2.29.1",
     "next": "11.1.2",
